🚀🎆😄😻 A little emoji goodness.

--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -43,6 +43,12 @@
             <groupId>com.vdurmont</groupId>
             <artifactId>emoji-java</artifactId>
             <version>3.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.json</groupId>
+                    <artifactId>json</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.sillelien</groupId>
