--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -51,6 +51,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160212</version>
+        </dependency>
+        <dependency>
             <groupId>com.sillelien</groupId>
             <artifactId>dollar-core</artifactId>
             <version>${project.version}</version>
