--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -431,13 +431,13 @@ workflows:
             branches:
               only: staging
 
-      - sonar:
-          requires:
-            - build
-            - devdocs
-          filters:
-            branches:
-              only: master
+#      - sonar:
+#          requires:
+#            - build
+#            - devdocs
+#          filters:
+#            branches:
+#              only: master
 
       - dist:
           requires:
@@ -463,7 +463,7 @@ workflows:
             - devdocs
             - maven-deploy
             - docs-preflight
-            - sonar
+#            - sonar
           filters:
             branches:
               only: master
