--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -130,8 +130,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.jayway.restassured</groupId>
+            <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
+            <version>3.0.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
